Fix XXE and OS command injection vulnerabilities
Co-authored-by: IAmATeaPot418 <5336227+IAmATeaPot418@users.noreply.github.com>